# pq_blind_signatures

./: .gitignore  .gitmodules  Readme.md  bench.sh  bench_log.txt
blind-signatures/: Cargo.toml  build.rs
blind-signatures-conservative/: Cargo.toml  README.md  build.rs
blind-signatures-conservative-deg16/: Cargo.toml  build.rs
blind-signatures-conservative-deg16/benches/: README.md  blind_sig_conservative_deg16.rs
blind-signatures-conservative-deg16/src/: blind_sig_conservative_deg16.rs  commitment.rs  lib.rs  zk.rs
blind-signatures-conservative-deg16/src/blind_sig_conservative_deg16/: keygen.rs  setup.rs  sign.rs  verify.rs
blind-signatures-conservative-deg16/src/zk/: vole_keccak_deg16_then_mayo.rs
blind-signatures-conservative-deg16/src/zk/vole_keccak_deg16_then_mayo/: parameters.rs  proof_state.rs
blind-signatures-conservative-rain/: Cargo.toml  build.rs
blind-signatures-conservative-rain/benches/: README.md  blind_sig_conservative_rain.rs
blind-signatures-conservative-rain/src/: blind_sig_conservative_rain.rs  commitment.rs  lib.rs  zk.rs
blind-signatures-conservative-rain/src/blind_sig_conservative_rain/: keygen.rs  setup.rs  sign.rs  verify.rs
blind-signatures-conservative-rain/src/zk/: vole_rain_then_mayo.rs
blind-signatures-conservative-rain/src/zk/vole_rain_then_mayo/: parameters.rs  proof_state.rs
blind-signatures-conservative/benches/: README.md  blind_sig_conservative.rs
blind-signatures-conservative/src/: blind_sig_conservative.rs  commitment.rs  lib.rs  zk.rs
blind-signatures-conservative/src/blind_sig_conservative/: keygen.rs  setup.rs  sign.rs  verify.rs
blind-signatures-conservative/src/zk/: vole_keccak_then_mayo.rs
blind-signatures-conservative/src/zk/vole_keccak_then_mayo/: parameters.rs  proof_state.rs
blind-signatures/benches/: README.md  blind_sig_optimized.rs
blind-signatures/src/: blind_sig_optimized.rs  lib.rs  zk.rs
blind-signatures/src/blind_sig_optimized/: keygen.rs  setup.rs  sign.rs  verify.rs
blind-signatures/src/zk/: vole_mayo.rs
blind-signatures/src/zk/vole_mayo/: parameters.rs  proof_state.rs
mayo-c-rain-sys/: Cargo.toml  Makefile  Readme.md  build.rs  mayo_rain.c  mayo_rain.h  wrapper.h
mayo-c-rain-sys/src/: lib.rs  mayo.rs
mayo-c-sys/: Cargo.toml  Makefile  Readme.md  build.rs  mayo_without_hashing.c  mayo_without_hashing.h  wrapper.h
mayo-c-sys/src/: lib.rs  mayo.rs
misc_stuff/: misc_bench_cmds.md  poly.sage
vole/: build_consv_bs_keccak.sh  build_consv_bs_keccak_deg16.sh  build_consv_bs_rainhash.sh  build_opti_bs.sh  clean.sh  meson.build
vole-keccak-deg16-then-mayo-sys/: Cargo.toml  Makefile  build.rs  wrapper.h
vole-keccak-deg16-then-mayo-sys/src/: lib.rs
vole-keccak-then-mayo-sys/: Cargo.toml  Makefile  build.rs
vole-mayo-sys/: Cargo.toml  Makefile  build.rs  wrapper.h
vole-rainhash-then-mayo-sys/: Cargo.toml  Makefile  build.rs  wrapper.h
vole/common/: fips202.c
vole/conservative_bs/: constants.hpp  faest.h  faest.inc  faest_keys.inc  owf_proof_tools.hpp  parameters.hpp
vole/conservative_bs/rainhash_plain/: field.h  rain_hash.cpp  rain_hash.h  rainhash512_params.md  types.h
vole/conservative_bs/rainhash_plain/scripts/: rain_hash_instance_gen.sage  rain_hash_instance_gen.sage.py
vole/conservative_bs/test/: test.hpp  test_voleconsv_bs.cpp
vole/faest-cpp-tmp/: .clang-format  .gitignore  LICENSE  README.md  api.cpp.in  api.h.in  api.hpp  faest.cpp  faest.hpp  faest_keys.hpp  owf_proof.cpp  owf_proof.hpp  owf_proof.inc  parameters.hpp  polynomials_constants.cpp  polynomials_constants.hpp  quicksilver.hpp  rain_const.hpp  small_vole.cpp  vector_com.hpp  vector_com.inc  vole_commit.cpp
vole/faest-cpp-tmp/avx2/: aes_impl.hpp  gfsmall_impl.hpp  polynomials_impl.hpp
vole/faest-cpp-tmp/rainhash_plain/: rain_hash  rain_hash_256_7.h  rain_hash_512_7.h
vole/faest-cpp-tmp/rainhash_plain/field/: field.h  field_GF2_512.cpp  field_GF2_512.hpp  field_templates.h
vole/faest-cpp-tmp/rainhash_plain/scripts/: Rain-256-7.txt
vole/faest-cpp-tmp/subprojects/: xkcp.wrap
vole/faest-cpp-tmp/subprojects/packagefiles/xkcp/: config.h  meson.build
vole/faest-cpp-tmp/test/: bavc_tvs_from_ref.hpp  bench_api.cpp  bench_components.cpp  bench_leaf_hash.cpp  bench_variants.cpp  fips202.h  meson.build  test_aes.cpp  test_aes_tvs.cpp  test_aes_tvs.hpp  test_bavc_tvs.cpp  test_bavc_tvs.hpp  test_faest.cpp  test_faest_experimental.cpp  test_faest_tvs.cpp  test_faest_tvs.hpp  test_faest_v2_tvs.cpp  test_faest_v2_tvs.hpp  test_gfsmall.cpp  test_gfsmall_tvs.cpp  test_gfsmall_tvs.hpp  test_owf_proof.cpp  test_owf_proof_tools.cpp  test_parameters.cpp  test_polynomials.cpp  test_prg.cpp  test_prg_tvs.cpp  test_prg_tvs.hpp  test_quicksilver.cpp  test_small_vole.cpp  test_transpose.cpp  test_universal_hash.cpp  test_vector_com.cpp  test_vole_commit.cpp  test_vole_commit_tvs.cpp  test_vole_commit_tvs.hpp  test_vole_commit_tvs_v2.cpp  test_vole_commit_tvs_v2.hpp  test_volekeccak.cpp  test_volekeccak_then_mayo_bs.cpp  (+5 more)
vole/faest-cpp-tmp/tools/: Makefile  prepare_nist.py
vole/misc_field_magic_scripts/: check_irreducible.sage  check_irreducible.sage.py  deg4_mul_deg4_red_step_by_step.sage  find_irreducible.sage  find_irreducible.sage.py  lin_frobenius_f2_sq_map.sage  lin_frobenius_f2_sq_map.sage.py  out.txt  rain_hash_check poly.sage.py  rain_hash_check_poly.sage  rain_hash_check_poly.sage.py  script_128_to_512.sage  script_128_to_512.sage.py  script_4_to_128.sage  script_4_to_128.sage.py  script_4_to_192.sage  script_4_to_192.sage.py  script_4_to_256.sage  script_4_to_256.sage.py  script_512_to_512.sage  script_512_to_512.sage.py  script_8_to_128.sage  script_8_to_128.sage.py
vole/optimized_bs/: constants.hpp  faest.cpp  faest.h  faest.hpp  faest.inc  faest_keys.hpp  faest_keys.inc  owf_proof.cpp  owf_proof.hpp  owf_proof.inc  parameters.hpp  polynomials_constants.cpp  polynomials_constants.hpp  quicksilver.hpp  small_vole.cpp  small_vole.inc  vole_commit.cpp
vole/optimized_bs/avx2/: polynomials_impl.hpp
vole/optimized_bs/test/: meson.build  test.hpp  test_voleopti_bs.cpp
(+358 files in other folders)
