[package]
name = "blind-signatures-conservative-rain"
version = "0.1.0"
edition = "2024"

[dependencies]
mayo-c-rain-sys = { path = "../mayo-c-rain-sys" }
vole-rainhash-then-mayo-sys = { path = "../vole-rainhash-then-mayo-sys" }
criterion = {version = "0.6", features = ["html_reports"]}
rand = "0.9.2"

[[bench]]
name = "blind_sig_conservative_rain"
harness = false