[package]
name = "blind-signatures-conservative"
version = "0.1.0"
edition = "2024"

[dependencies]
mayo-c-sys = { path = "../mayo-c-sys" }
vole-keccak-then-mayo-sys = { path = "../vole-keccak-then-mayo-sys" }
criterion = {version = "0.6", features = ["html_reports"]}
rand = "0.9.2"

[[bench]]
name = "blind_sig_conservative"
harness = false